--- a/coronavirus-tracker/pom.xml
+++ b/coronavirus-tracker/pom.xml
@@ -27,10 +27,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
-			<artifactId>common-csv</artifactId>
-			<version>1.8</version>
+			<artifactId>commons-csv</artifactId>
+			<version>1.9.0</version>
 		</dependency>
 
 		<dependency>
